fixes z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ body {
 
 .bubble-pop {
 	background: rgba(0,0,0,0.4);
+	z-index: 1;
 }
 
 #bubble-game {
